...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="USD / EUR"
        android:textColor="#9BA8BA"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/widget_primary_value"
        android:layout_width="match_parent"
...
